<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="faxian">发现</string>
    <string name="luzhi">录制铃声</string>
    <string name="bianji">编辑闹钟</string>
    <string name="shangchuan">上传你的声音，温暖远方的Ta</string>
    <string name="pingjing">平静的宇宙</string>
    <string name="xuanze">选择任务</string>
    <string name="shijian">时间:</string>
    <string name="chongfu">重复:</string>
    <string name="lingsheng">铃声:</string>
    <string name="biaoqian">标签:</string>
    <string name="shijian1">07</string>
    <string name="shijian2">:</string>
    <string name="shijian3">30</string>
    <string name="shijian4">AM</string>
    <string name="gongzuori">星期一</string>
    
    <string name="Firefly">Firefly</string>
    <string name="shaoxi">稍息立正起床</string>
    <string name="nandu">难度：</string>
    <string name="sheding">设定铃声</string>
    <string name="zhendong">震动</string>
    <string name="yu">预设值</string>
    <string name="Baby">Baby Wake Up</string>
    <string name="Bob">Bob Start Attack</string>
    <string name="BoDeSa">BoDeSa</string>
    <string name="Lantern">Lantern Start</string>
    <string name="Lemon">Lemon Port</string>
    <string name="Mushrooms">Mushrooms Villain</string>

</resources>